feedback scrollbar issue fixed

--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -3839,7 +3839,7 @@ grid-row: 1 / 2;
   width: calc(90vh - 40vh);
   height: 20vh;
   /* overflow-y: auto; */
-  overflow-y: scroll;
+  overflow-y: auto;
   /* scrollbar-width: none; */
   /* Hide scrollbar for Firefox */
   /* -ms-overflow-style: none; */
